# DetectionViewer

./: CMakeLists.txt  README.md
DetectionViewer/DetectionViewerLib/: logic_annotation.py  logic_dataset.py  logic_detection.py  logic_view.py  parameter_node.py  widget_annotation.py  widget_dataset.py  widget_view.py
DetectionViewer/Resources/UI/: Annotations.ui  Dataset.ui  View.ui
docs/: reference.md
main/: CMakeLists.txt  DetectionViewer.py  main.py
main/DetectionViewerLib/: logic.py  widget.py
main/Resources/UI/: DetectionViewer.ui  Settings.ui  main.ui
